--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
     "install": "^0.12.2",
+    "material-design-icons": "^3.0.1",
     "npm": "^6.7.0",
     "react": "^16.8.1",
     "react-bootstrap": "^0.32.4",
